0.9.7 (currently working on)

0.9.6 (released 2013-12-31)
- [#4512] Fix: HTML entities of field ###attached_files### are displayed only as plain text
- [#4610] Fix: PHP/Apache crash/SIGSEV when running the unit tests on PHP 5.4
- [#4844] Fix: Crash in the single view and on the registration page on PHP 5.4.22
- [#4817] Change: Drop the new prices
- [#4849] Fix: Unit test errors about missing constructor parameters
- [#4362] Fix: Skip the configuration check in the unit tests
- [#4361] Fix: Hide the time slot records in the BE lists
- [#4653] Fix: Crash in BE in TYPO3 CMS 6.0.x
- [#4645] Fix: Crash when running the RegistrationManager unit tests in PHP 5.4.6
- [#4622] Fix: Unit test crash with in the DefaultControllerTest PHP 5.4.6
- [#4621] Fix: Event list crashes with PHP 5.4.6
- [#4603] Fix: Download CSV file is empty, thanks to Ton Tersteeg

0.9.5 (released 2012-08-01)
- [#4504] Fix: Registration link in the list view for events with a separate single view page links to the single view page instead of the registration page
- [#4483] Fix: Dash gets escaped twice in the time-slot list in the single view
- [#4497] Change: Adapt the German label for the submit button to § 312g Abs. 3 BGB
- [#4485] Fix: Add TYPO3 maximum version to ext_emconf.php
- [#4481] Fix: Failing unit tests in tx_seminars_EmailSalutation_testcase

0.9.4 (released 2012-07-03)
- [#4482] Fix: PHP error in class.ext_update.php
- [#4462] Fix: HTML tags are visible in the forms when using ameos_formidable 1.1.549
- [#4467] Fix: Test failures and crashes in current Core master in tx_seminars_FrontEnd_DefaultControllerTest, tx_seminars_OldModel_RegistrationTest, tx_seminars_Service_RegistrationManagerTest
- [#4371] Fix: Empty labels in the FE editor and the registration form need be just a space instead of &nbsp;
- [#4429] Fix: Escape the output in more places
- [#4440] Fix: Only use forceCharset for TYPO3 < 4.7