@@ -1,4 +1,5 @@
 0.9.7 (currently working on)
+- [#4935] Bugfix: Drop the colon after the payment method in the e-mail to the attendee
 
 0.9.6 (released 2013-12-31)
 - [#4512] Fix: HTML entities of field ###attached_files### are displayed only as plain text
